--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charest = 'utf-8'>
-    <title>
-        Welcome My Website
-    </title>
-</head>
-<body>
-    <h1>歡迎光臨我的網站</h1>
-    <hr>
+<!-- index.html -->
+{% extends 'base.html.html' %}
+{% block title %} Welcome My Website {% endblock %}
+{% block headmessage %}
+    <h3 style='font-family:標楷體;'> Website List </h3>
+{% endblock %}
+{% block content %}
     {% for post in posts %}
-        <p style = 'font-family:微軟正黑體;font-size:16pt;font-weight:bold;'>
-            <a href='/post/{{post.slug}}'>{{post.title}}</a>
+        <p style='font-family:微軟正黑體;font-size:14pt;font-weight:bold;'>
+            <a href='/post/{{post.slug}}'>{{ post.title }}</a>
         </p>
     {% endfor %}
-    <hr>
-    <h3>現在時刻 : {{now}}</h3>
-</body>
-</html>
+{% endblock %}
