--- a/templates/post.html
+++ b/templates/post.html
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charest = 'utf-8'>
-    <title>
-        Welcome My Website
-    </title>
-</head>
-<body>
-    <h1>{{ post.title }}</h1>
-    <hr>
-        <p style = 'font-family:微軟正黑體;font-size:12pt;letter-spacing:2pt;'>
-            <a>{{ post.body }}</a>
-        </p>
-    <hr>
-    <h3><a href='/'>回首頁</a></h3>
-</body>
-</html>
+<!-- post.html -->
+{% extends 'base.html' %}
+{% block title%}{{ post.title }} - 我的文章 {% endblock %}
+{% block headmessage %}
+    <h3 style='font-family:微軟正黑體;'>{{ post.title }}</h3>
+    <a style='font-family:微軟正黑體;' href='/'>回首頁</a>
+{% endblock %}
+{% block content %}
+    <p style='font-family:微軟正黑體;font-size:12pt;letter-spacing:2pt;'>
+        {{ post.body }}
+    </p>
+{% endblock %}
