--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!-- index.html -->
-{% extends 'base.html.html' %}
+{% extends 'base.html' %}
 {% block title %} Welcome My Website {% endblock %}
 {% block headmessage %}
     <h3 style='font-family:標楷體;'> Website List </h3>
