--- a/templates/header.html
+++ b/templates/header.html
@@ -1,2 +1,4 @@
 <!-- header.html -->
-<h1 style='font-family:微軟正黑體;'>Welcome 我的文章</h1>
+{% load static %}
+<h2><img src="{% static 'image/logo.png' %}" width="150">
+歡迎光臨 我的文章</h2>
