--- a/templates/base.html
+++ b/templates/base.html
@@ -2,17 +2,51 @@
 <!DOCTYPE>
 <html>
 <head>
-    <meta charest = 'utf-8'>
+    <meta charset = 'utf-8'>
     <title>
         {% block title %}{% endblock%}
     </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous">
 </head>
 <body>
-    {% include 'header.html' %}
-    {% block headmessage %} {% endblock %}
-    <hr>
-    {% block content %} {% endblock %}
-    <hr>
-    {% include 'footer.html' %}
+   <div class="container-fluid">
+        {% include 'header.html' %}
+        <div class="row">
+            <div class="col-sm-3 col-md-3">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Menu</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class='list-group'>
+                            <a href='/' class='list-group-item'>HOME</a>
+                            <a href='https://www.youtube.com/' class='list-group-item'>YouTube</a>
+                            <a href='https://www.twitch.tv/guanweiboy' class='list-group-item'>Twitch-冠緯</a>
+                            <a href='https://www.twitch.tv/bbbb87' class='list-group-item'>Twitch-RB</a>
+                            <a href='https://www.twitch.tv/never_loses' class='list-group-item'>Twitch-NL</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-9 col-md-9">
+                <div class="card">
+                    <div class="card-header">
+                        {% block headmessage %}
+                        {% endblock %}
+                    </div>
+                    <div class="card-body">
+                        {% block content %} {% endblock %}
+                    </div>
+                    <div class="card-footer">
+                        {% include 'footer.html' %}
+                    </div>
+                </div>
+            </div>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+            crossorigin="anonymous">
+            </script>
 </body>
 </html>
