--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,6 +3,6 @@
     {% if now %}
     <p style='font-family:微軟正黑體;'>現在時刻 : {{ now }}</p>
     {% else %}
-    <p style='font-family:微軟正黑體;'>本文內容為自行創作，如有雷同純屬巧合...</p>
+    <p style='font-family:微軟正黑體;'>本文內容取自網路，如有侵權自行告知...</p>
     {% endif %}
 {% endblock %}
