--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 {% block title %} Welcome My Website {% endblock %}
 {% block headmessage %}
-    <h3 style='font-family:標楷體;'> Website List </h3>
+    <h3 style='font-family:標楷體;'> Song List </h3>
 {% endblock %}
 {% block content %}
     {% for post in posts %}
